fix a problem where jumping to the bottom-most anchor causes ugly layout

--- a/PageRoot/www/scss/index.scss
+++ b/PageRoot/www/scss/index.scss
@@ -214,7 +214,7 @@ input[type='search'] {
         background-color: orange;
         overflow: scroll;
         float: right;
-        display: block !important;
+        display: block;
         border: 0;
         z-index: 50000;
     }
